--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+#links {
+  border: 2px solid black;
+  margin: 2px;
+  text-align: center;
+  letter-spacing: 2px;
+  background-color: darkgrey;
+  
+}
